--- a/index.html
+++ b/index.html
@@ -37,6 +37,35 @@
                         <a href="#">Search</a>
                     </div>
                 </div>
+
+                <ul>
+                    <li><a href="#">Microsoft</a></li>
+                    <li><a href="#" class="link">Game Pass</a></li>
+                    <li><a href="#" class="link">Games</a></li>
+                    <li><a href="#" class="link link-hide">Devices</a></li>
+                    <li><a href="#" class="link link-hide">Cloud Gaming</a></li>
+                    <li><a href="#" class="link link-hide">Comunnity</a></li>
+                    <li><a href="#" class="link link-hide">Suppport</a></li>
+                    <li><a href="#" class="link link-hide">My Xbox</a></li>
+                    <li class="more">
+                        <a href="#" class="link" id="bmore">More</a>
+                        <div class="menu">
+                            <li><a href="#">Devices</a></li>
+                            <li><a href="#">Cloud Gaming</a></li>
+                            <li><a href="#">Comunnity</a></li>
+                            <li><a href="#">Suppport</a></li>
+                            <li><a href="#">My Xbox</a></li>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li><a href="#" class="link">Search</a></li>
+                    <li><a href="#" class="link">Cart</a></li>
+                    <li><a href="#" class="link">Sign In</a></li>
+                </ul>
+
+
             </nav>
         </header>
     </div>
