CSS para el menu de escritorio

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Halo Infinite</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link rel="stylesheet" href="/src/css/main.css"/>
 </head>
 <body>
     <!--Todo nuestro HTML vivira en una capa main container-->
     <div id="main-container">
         <header>
             <nav>
+                <!--Menu para movil-->
                 <div class="mobile">
                     <div class="header">
                         <button id="bmenu">
@@ -38,6 +40,7 @@
                     </div>
                 </div>
 
+                <!--Menu para escritorio-->
                 <ul>
                     <li><a href="#">Microsoft</a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
@@ -50,11 +53,11 @@
                     <li class="more">
                         <a href="#" class="link" id="bmore">More</a>
                         <div class="menu">
-                            <li><a href="#">Devices</a></li>
-                            <li><a href="#">Cloud Gaming</a></li>
-                            <li><a href="#">Comunnity</a></li>
-                            <li><a href="#">Suppport</a></li>
-                            <li><a href="#">My Xbox</a></li>
+                            <a href="#">Devices</a>
+                            <a href="#">Cloud Gaming</a>
+                            <a href="#">Comunnity</a>
+                            <a href="#">Suppport</a>
+                            <a href="#">My Xbox</a>
                         </div>
                     </li>
                 </ul>
