--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <button id="bmenu">
                             <span class="material-icons">&#xe5d2;</span>
                         </button>
-                        <a href="#">Microsoft</a>
+                        <a href="#"><img src="/src/img/logo.png" width="150"></a>
 
                         <div>
                             <a href="#"><span class="material-icons">&#xe8cc;</span></a>
@@ -42,7 +42,7 @@
 
                 <!--Menu para escritorio-->
                 <ul>
-                    <li><a href="#">Microsoft</a></li>
+                    <li><a href="#"><img src="/src/img/logo.png" width="120"></a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
                     <li><a href="#" class="link">Games</a></li>
                     <li><a href="#" class="link link-hide">Devices</a></li>
