Agregando al Website la estructura HTML que tendra la sección de los videos que se mostraran en forma de slider.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,42 @@
                 </a>
             </p>
         </section>
+
+        <section id="videos">
+            <h2>BECOME</h2>
+            
+            <p class="w-75">
+                The legendary Halo series returns with the most expansive Master Chief
+                campaign yet and ground-breaking free to play multiplayer
+                experience.
+            </p>
+
+            <h3>Trailers and Gameplay</h3>
+
+            <!--comienza la estructura de la galeria-->
+            <div id="slider">
+                <div id="controls">
+                    <button class="prev">
+                        <span class="material-icons">&#xe5e0;</span>
+                    </button>
+                    <button class="next">
+                        <span class="material-icons">&#xe5e1;</span>
+                    </button>
+                </div>
+
+                <!--Aqui mostraremos el video actual, tendra una etiquet
+                    iframe que se insertara de forma dinamica para que se 
+                    muestr el video-->
+                <div id="current">
+
+                </div>
+
+                <!--Mostraremos la lista de videos-->
+                <div id="videos-container">
+
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="/src/js/main.js"></script>
