Aplicando JavaScript para los videos que estaran en el slider y asi mismo agregando las miniaturas de los videos que se agregaran

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             <!--comienza la estructura de la galeria-->
             <div id="slider">
                 <div id="controls">
-                    <button class="prev">
+                    <button id="prev">
                         <span class="material-icons">&#xe5e0;</span>
                     </button>
-                    <button class="next">
+                    <button id="next">
                         <span class="material-icons">&#xe5e1;</span>
                     </button>
                 </div>
