Realizando el footer y aplicando un poco de CSS para el mismo

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
             </div>
         </div>
         </section>
+
+        <footer>            
+        </footer>
     </div>
 
     <script src="/src/js/main.js"></script>
