--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="/src/css/main.css"/>
+      <link rel="stylesheet" href="/src/css/scheme.css"/>
 </head>
 <body>
     <!--Todo nuestro HTML vivira en una capa main container-->
