--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Halo Infinite</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <link rel="stylesheet" href="/src/css/main.css"/>
-      <link rel="stylesheet" href="/src/css/scheme.css"/>
+      
 </head>
 <body>
     <!--Todo nuestro HTML vivira en una capa main container-->
@@ -21,7 +20,7 @@
                         <button id="bmenu">
                             <span class="material-icons">&#xe5d2;</span>
                         </button>
-                        <a href="#"><img src="/src/img/logo.png" width="150"></a>
+                        <a href="#"><img src="./src/img/logo.png" width="150"></a>
 
                         <div>
                             <a href="#"><span class="material-icons">&#xe8cc;</span></a>
@@ -43,7 +42,7 @@
 
                 <!--Menu para escritorio-->
                 <ul>
-                    <li><a href="#"><img src="/src/img/logo.png" width="120"></a></li>
+                    <li><a href="#"><img src="./src/img/logo.png" width="120"></a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
                     <li><a href="#" class="link">Games</a></li>
                     <li><a href="#" class="link link-hide">Devices</a></li>
@@ -142,7 +141,7 @@
 
             <div class="item-store">
                 <div class="left">
-                    <img src="/src/img/game.png" alt=""/>
+                    <img src="./src/img/game.png" alt=""/>
                 </div>                
             
 
@@ -175,6 +174,6 @@
         </footer>
     </div>
 
-    <script src="/src/js/main.js"></script>
+    <script src="./src/js/main.js" type="module"></script>
 </body>
 </html>
