--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </header>
 
         <section id="banner">
-            <h2>Halo Infinite</h2>
+            <h2>Halo With Yuto</h2>
             <p>
                 <a href="#" class="green-button">
                     Get it Now <span class="material-icons">&#xe5cc;</span>
